--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
         "files": [ "bootstrap.php" ]
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "master-dev"
+            "dev-master": "1.0-dev"
         }
     }
 }
